setup-scripts/OLD/70-spark/spark-7077-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: spark
  name: spark-7077-vs
  labels:
    app: spark
spec:
  gateways:
  - istio-system/vps2-gateway
  hosts:
  - 'spark-7077.vps2.cluster-1.de'
  tcp:
  - route:
    - destination:
        host: bit-spark-master-svc.spark.svc.cluster.local
        port:
          number: 7077
