setup-scripts/OLD/70-spark/spark-vps4-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: spark
  name: spark-vps4-vs
  labels:
    app: spark
spec:
  gateways:
  - istio-system/vps4-gateway
  hosts:
  - spark.vps4.cluster-1.de
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: bit-spark-master-svc.spark.svc.cluster.local
        port:
          number: 80
