setup-scripts/OLD/70-spark/spark-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: spark
  name: spark-vs
  labels:
    app: spark
spec:
  gateways:
  - istio-system/vps2-gateway
  hosts:
  - 'spark.vps2.cluster-1.de'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: bit-spark-master-svc.spark.svc.cluster.local
        port:
          number: 80
